# name: TestUpdate.test
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'primary_group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
    },
  }
---
# name: TestUpdate.test_non_existent_primary_group
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Non-existent group: managers',
  }
---
# name: TestUpdate.test_not_a_member_of_primary_group
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'User is not member of group',
  }
---
# name: TestUpdate.test_not_found
  <class 'dict'> {
    'id': 'not_found',
    'message': 'User does not exist',
  }
---
# name: TestUpdate.test_short_password
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Password does not meet minimum length requirement (8)',
  }
---
# name: TestUpdate.test_with_groups
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'primary_group': None,
  }
---
# name: test_add_permission[invalid_permission]
  <class 'list'> [
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'owner',
          'member',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'owner', 'member'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'label_manager',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'label_manager'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'project_manager',
          'project_editor',
          'project_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'project_manager', 'project_editor', 'project_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'reference_manager',
          'reference_builder',
          'reference_editor',
          'reference_contributor',
          'reference_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'reference_manager', 'reference_builder', 'reference_editor', 'reference_contributor', 'reference_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'sample_manager',
          'sample_editor',
          'sample_analyzer',
          'sample_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'sample_manager', 'sample_editor', 'sample_analyzer', 'sample_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'subtraction_manager',
          'subtraction_editor',
          'subtraction_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'subtraction_manager', 'subtraction_editor', 'subtraction_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'upload_manager',
          'upload_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'upload_manager', 'upload_viewer'",
      'type': 'type_error.enum',
    },
  ]
---
# name: test_add_permission[valid_permission]
  True
---
# name: test_create[None]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'fb085f7f',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_create[None].2
  <class 'dict'> {
    '_id': 'fb085f7f',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: test_create[None][location]
  '/users/fb085f7f'
---
# name: test_find[None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': True,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bob',
        'id': 'test',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'leeashley',
        'id': 'bf1b993c',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'zclark',
        'id': 'fb085f7f',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find[fred]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'fred',
        'id': 'bf1b993c',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get[200]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
    },
  }
---
# name: test_get[404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_list_permissions[bob]
  <class 'list'> [
  ]
---
# name: test_list_permissions[test]
  <class 'list'> [
    <class 'dict'> {
      'id': 'reference_builder',
    },
    <class 'dict'> {
      'id': 'sample_editor',
    },
  ]
---
# name: test_remove_permission[invalid_permission]
  <class 'list'> [
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'owner',
          'member',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'owner', 'member'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'label_manager',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'label_manager'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'project_manager',
          'project_editor',
          'project_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'project_manager', 'project_editor', 'project_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'reference_manager',
          'reference_builder',
          'reference_editor',
          'reference_contributor',
          'reference_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'reference_manager', 'reference_builder', 'reference_editor', 'reference_contributor', 'reference_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'sample_manager',
          'sample_editor',
          'sample_analyzer',
          'sample_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'sample_manager', 'sample_editor', 'sample_analyzer', 'sample_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'subtraction_manager',
          'subtraction_editor',
          'subtraction_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'subtraction_manager', 'subtraction_editor', 'subtraction_viewer'",
      'type': 'type_error.enum',
    },
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'upload_manager',
          'upload_viewer',
        ],
      },
      'in': 'path',
      'loc': <class 'list'> [
        'role',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'upload_manager', 'upload_viewer'",
      'type': 'type_error.enum',
    },
  ]
---
# name: test_remove_permission[valid_permission]
  True
---
